<resources>
    <string name="app_name">FacebookFirebase-Demo</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">201486427066708</string>
    <string name="fb_login_protocol_scheme">fb201486427066708</string>

    <string name="title_activity_login">Login Success</string>
    <string name="title_activity_main">Firebase Demo</string>
    <string name="title_activity_account">AccountActivity</string>

    <string name="email_login">Email Log In</string>
    <string name="facebook_login">Facebook Log In</string>
    <string name="database">Database</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="button_login">Log In</string>
    <string name="button_register">Register</string>
    <string name="button_logout">Log Out</string>
    <string name="button_facebook_login">Log In With Facebook</string>
    <string name="button_forgot_password">Forgotten Password?</string>
    <string name="button_sign_up">Sign Up With Email</string>
    <string name="login_success">You have logged in successfully.</string>
    <string name="click_me">Click Me!</string>
    <string name="do_not_click_me">Do NOT Click Me!</string>
    <string name="title_activity_registration">Register</string>
</resources>
