<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sg.edu.nus.baojun.facebookfirebase_demo.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:padding="5dp"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:padding="5dp"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray" />

        <TextView
            android:id="@+id/button_email_login"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/button_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="15dp"
            android:background="@color/facebook"
            android:gravity="center"
            android:text="@string/button_facebook_login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/button_forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_gray"/>

        <LinearLayout
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/button_sign_up" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
