<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sg.edu.nus.baojun.facebookfirebase_demo.activity.UserActivity"
    tools:showIn="@layout/activity_user">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_success"
            android:gravity="center"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_click_me"
                android:layout_width="140dp"
                android:layout_height="43dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/click_me"
                android:layout_marginEnd="3dp"
                android:gravity="center"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/button_do_not_click_me"
                android:layout_width="140dp"
                android:layout_height="43dp"
                android:background="@color/colorSecondary"
                android:textColor="@color/white"
                android:text="@string/do_not_click_me"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/button_logout"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>
